search page wording adjustment, add placeholder on inputs, fixed radius selector on Firefox

--- a/front/src/app/pages/Search/Dropdown/searchdropdown.css
+++ b/front/src/app/pages/Search/Dropdown/searchdropdown.css
@@ -79,3 +79,13 @@ body {
   font-weight: bold;
   color: white !important;
 }
+
+.searchdropdown__toggler {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: block;
+  width: 100%;
+}
